--- a/SPACEWARS2.0.vcxproj.filters
+++ b/SPACEWARS2.0.vcxproj.filters
@@ -20,13 +20,22 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stuff.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
     <ClInclude Include="logic.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="classes.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="textures.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="data.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="arcade.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="company.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
