добавлен босс на 5 волне компании

--- a/SPACEWARS2.0.vcxproj
+++ b/SPACEWARS2.0.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="arcade.h" />
     <ClInclude Include="data.h" />
     <ClInclude Include="company.h" />
+    <ClInclude Include="dungeonMaster.h" />
     <ClInclude Include="textures.h" />
     <ClInclude Include="logic.h" />
   </ItemGroup>
