--- a/SPACEWARS2.0.vcxproj.filters
+++ b/SPACEWARS2.0.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="company.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="dungeonMaster.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
