beta 1.1 +анимация двигателя +анимация космоса +изменение механики выстрела лучом +изменена механика выстрелов и движения игрока +переписан класс "Player" (из статического в обычный) Баги: - пули могут пройти насквозь противкика(скорее всего isCrash) - большое количество пуль приводят к сильным лагам(необходимо изменить механику выстрела ) - режим компании не запускается - выпущенный лазер пропадает слишком медленно (10 секунд после завершения эффекта) - выпущенный лазер иногда не пропадает (даже с начала новой игры) - В режиме аркада в определенных раундах не спавнятся противники - В режиме аркада противники могут вообще не спавниться (помогает только перезапуск игры)

--- a/SPACEWARS2.0.vcxproj
+++ b/SPACEWARS2.0.vcxproj
@@ -153,8 +153,12 @@
     <ClInclude Include="data.h" />
     <ClInclude Include="company.h" />
     <ClInclude Include="dungeonMaster.h" />
+    <ClInclude Include="player.h" />
     <ClInclude Include="textures.h" />
     <ClInclude Include="logic.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="methods.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
