--- a/SPACEWARS2.0.vcxproj.filters
+++ b/SPACEWARS2.0.vcxproj.filters
@@ -41,5 +41,13 @@
     <ClInclude Include="dungeonMaster.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="player.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="methods.inl">
+      <Filter>Файлы заголовков</Filter>
+    </None>
   </ItemGroup>
 </Project>
